Fixed links on the Now page

--- a/content/now/2020-03-13.md
+++ b/content/now/2020-03-13.md
@@ -20,7 +20,7 @@ Earning more money is still a goal of mine. With my new full-time gig, the incom
 
 
 
-### [The Shop for Dev](theshop.dev)
+### [The Shop for Dev](https://theshop.dev)
 
 This is currently a store of developer-oriented merchandise. In the future, I hope to turn it into a more diverse shop. I got the idea for this product when I was looking for a Django sweatshirt, but couldn't find a good one. This idea is excellent, even if it doesn't pan out. Here are a couple of reasons for that:
 
@@ -34,7 +34,7 @@ Due to other projects, this is moving along slowly. I need to put more time into
 
 
 
-### [Built with Django](builtwithdjango.com)
+### [Built with Django](https://builtwithdjango.com)
 
 I have been running this project for a little while now. This is my attempt to collect/curate cool projects that were built with Django. We already have a good number of projects on the website. I have a lot of ideas on how to make it better.
 
@@ -44,7 +44,7 @@ I also want to improve the UI a little and make a separate page highlighting Dja
 
 
 
-### [DocPhoto](docphoto.carrd.co)
+### [DocPhoto](https://docphoto.carrd.co)
 
 This idea was born when I was making a photo for my USCIS application. I went to CVS to make a photo and, despite four different tries, got the shittiest picture. I'm sure some people have the same experience of making document photos.
 
