addind a newsletter issue 2022-01-18

--- a/content/newsletter/2022-01-18.md
+++ b/content/newsletter/2022-01-18.md
@@ -1,4 +1,4 @@
-<img src="https://ogi.sh/article?eyebrow=11%20January%202022%20-%20RASUL%20KIREEV&title=TUESDAY%20LETTER%20%2327&subtitle=Happy%20New%20Year,%20Appreciating%20Your%20SO%20and%20Reducing%20Automation&unsplashId=6iHNihTE4E8" />
+<img src="https://ogi.sh/article?eyebrow=18%20January%202022%20-%20RASUL%20KIREEV&title=TUESDAY%20LETTER%20%2327&subtitle=Great%20Books%20of%20The%20Western%20World&unsplashId=zeH-ljawHtg" />
 
 I don't have too much personal news this week, except for the one I describe below. So, let's get straight to business. Hope you enjoy this week's letter.
 
