--- a/content/newsletter/2022-02-01.md
+++ b/content/newsletter/2022-02-01.md
@@ -1,8 +1,10 @@
-<img src="https://ogi.sh/article?eyebrow=25%20January%202022%20-%20RASUL%20KIREEV&title=TUESDAY%20LETTER%20%2329&subtitle=Daily%20Decisions,%20Plato%27s%20Apology%20and%20Building%20Wealth&unsplashId=dW6dFBoHUu4" />
+<img src="https://ogi.sh/article?eyebrow=01%20February%202022%20-%20RASUL%20KIREEV&title=TUESDAY%20LETTER%20%2330&subtitle=Socrates%20is%20Kind%20of%20a%20D*ck%20&unsplashId=EvMearrxas4" />
 
-I have been consistently sending a newsletter each week in 2022, which is good. But every single letter I send I would get at least one unsibscribe. I really hope that doesn't happen this week 😆 Although if it does, that means I have a higer percentage of people who listen to me.
+Hey, Happy Tuesday!
 
-Anyway, with that rant out of the way, let's get to the letter. I hope you enjoy.
+I have been consistently sending a newsletter each week in 2022, which is good. But every single letter I send I would get at least one unsubscribe. I really hope that doesn't happen this week 😆 Although if it does, that means I have a higher percentage of people who listen to me.
+
+Anyway, with that rant out of the way, let's get to the letter. I hope you enjoy it.
 
 ---
 
@@ -22,11 +24,11 @@ It's hard to come up with tags for this one. Lincoln is saying that it pays to b
 
 ✅ I have finished reading Book I of Plato's Republic and have some thoughts.
 
-👍 First of all, I will say that I have thoroughly enjoyed it. Plato's writing is very clear, very understandable and approachable. It is very interesting to observe how Socrates things and argue.
+👍 First of all, I will say that I have thoroughly enjoyed it. Plato's writing is very clear, very understandable, and approachable. It is very interesting to observe how Socrates thinks and argues.
 
 📜 The first book of the Republic is about the definition of Justice. Socrates is holding a conversation with two gentlemen who have a differing opinion of what justice is. You can clearly see the Socratic Method in action. Sometimes the arguments that he proposes are interesting, sometimes they don't make sense.
 
-🍆 So, why do I say that Socrates is kind of a dick? Here is why. Socrates always says that he knows nothing and instead he always asks. He always wants to get answers from others. This is his way of staying humble and continuing his learning journey, which is completely fine, good even. However, his quesitons are not just inquiring questions. Socrates asks questions that lead his "opponent" to a certain conclusion, the one that Socrates wants. So, in reality, Socrates does have a point, he does have an opinion, but he chooses not make it a statement, but "tricks" his opponent to get to the same conlusion that he has in his head. Clearly you need to have great intellect and be a great thinker to be able to do that, but again, this isn't "nicest" behaviour.
+🍆 So, why do I say that Socrates is kind of a dick? Here is why. Socrates always says that he knows nothing and instead he always asks. He always wants to get answers from others. This is his way of staying humble and continuing his learning journey, which is completely fine, good even. However, his questions are not just inquiring questions. Socrates asks questions that lead his "opponent" to a certain conclusion, the one that Socrates wants. So, in reality, Socrates does have a point, he does have an opinion, but he chooses not to make it a statement, but "tricks" his opponent to get to the same conclusion that he has in his head. Clearly, you need to have great intellect and be a great thinker to be able to do that, but again, this isn't "nicest" behavior.
 
 ❓ What do you think? Does my thinking make sense here? Or would you disagree with me?
 
@@ -36,6 +38,6 @@ It's hard to come up with tags for this one. Lincoln is saying that it pays to b
 
 <img style="border-radius: 50%; width: 100px" src="https://d33wubrfki0l68.cloudfront.net/a7d7fa34f6044797e2ff5f699eabdbfcd94964f3/0fb9e/images/avatar.jpg" alt="Michael Lynch">
 
-I have been going through Michael's course on "Hitting the Front Page of Hacker News". Apart from that Muchael write killer guides on various topics. If you don't know who he his, I strongly recommend checking him out.
+I have been going through Michael's course on "Hitting the Front Page of Hacker News". Apart from that Michael writes killer guides on various topics. If you don't know who him, I strongly recommend checking him out.
 
 mtlynch (his nickname) runs a bunch of cool projects like [is it keto?](https://isitketo.org/) and [TinyPilot](https://tinypilotkvm.com/).
