updaaaaated poetry post

--- a/content/newsletter/2022-02-15.md
+++ b/content/newsletter/2022-02-15.md
@@ -1,4 +1,4 @@
-<img src="https://ogi.sh/article?eyebrow=01%20February%202022%20-%20RASUL%20KIREEV&title=TUESDAY%20LETTER%20%2330&subtitle=Socrates%20is%20Kind%20of%20a%20D*ck%20&unsplashId=EvMearrxas4" />
+<img src="https://ogi.sh/article?eyebrow=15%20February%202022%20-%20RASUL%20KIREEV&title=TUESDAY%20LETTER%20%2333&subtitle=Help%2People%20Make%20Money%20&unsplashId=ZVprbBmT8QA" />
 
 Hey, Happy Tuesday!
 
