added thing to next newsletter

--- a/content/newsletter/2022-04-26.md
+++ b/content/newsletter/2022-04-26.md
@@ -2,6 +2,8 @@
 
 Hey, Happy Tuesday!
 
+__In this issue: logos for all of the United States, how to host a great housewarming party, my secret WhatsApp group for perfect abs, the struggle of living in NYC, 3 amazing quotes, why he's the only honest man left in news, audiobook studio tour, and more fun stuff.__
+
 __**Why you’re getting this**: I'm Nick Gray and this is my Friends Newsletter. I send this to people I’ve met recently, my contacts on LinkedIn, and friends I want to keep in touch with. You can un-subscríbe and I won’t be offended.__
 
 This week I don't have anything concrete prepared to talk about, so I'm just going to share with you a couple of small things. Hope you find them interesting.
