--- a/content/articles/july-2023.md
+++ b/content/articles/july-2023.md
@@ -15,7 +15,7 @@ twitterLink: ""
 hnLink: ""
 redditLink: ""
 indiehackersLink: ""
-description: What I did in July with my sid projects.
+description: What I did in July with my side projects.
 ---
 
 Here are the things I did during July 2023.
