added twitter link

--- a/content/articles/july-2023.md
+++ b/content/articles/july-2023.md
@@ -11,7 +11,7 @@ aiPrompt: a slightly cartoonish image of a boy from the back seating at a wooden
 keywords: [2023, July, Review]
 category: Personal
 type: article
-twitterLink: ""
+twitterLink: "https://twitter.com/rasulkireev/status/1686371165462564864"
 hnLink: ""
 redditLink: ""
 indiehackersLink: ""
